# vidtoolz-shorts

./: README.md  pyproject.toml
tests/: test_shorts.py  test_vidtoolz_shorts.py
vidtoolz_shorts/: __init__.py  shorts.py
