[project]
name = "vidtoolz-shorts"
version = "0.0.1"
description = "Create shorts from long form videos"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-shorts"
Changelog = "https://github.com/sukhbinder/vidtoolz-shorts/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-shorts/issues"
CI = "https://github.com/sukhbinder/vidtoolz-shorts/actions"

[project.entry-points."vidtoolz_plugins"]
shorts = "vidtoolz_shorts:shorts_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
